--- a/translations/kangyur/placeholders/096-003_toh754,951-the_essence_of_the_ten_vajrapanis.xml
+++ b/translations/kangyur/placeholders/096-003_toh754,951-the_essence_of_the_ten_vajrapanis.xml
@@ -5,14 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">lag na rdo rje bcu'i snying po/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">daśavajrapāṇihṛdaya</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Daśavajrapāṇihṛdaya</title>
                 <title type="mainTitle" xml:lang="en">The Essence of the Ten Vajrapāṇis</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lag na rdo rje bcu'i snying po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryadaśavajrapāṇihṛdaya</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryadaśavajrapāṇihṛdaya</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lag na rdo rje bcu'i snying po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryadaśavajrapāṇihṛdaya</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryadaśavajrapāṇihṛdaya</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-003"/>
             </publicationStmt>
             <sourceDesc>
@@ -35,9 +40,19 @@
                     <idno source-id="O1JC114941JC12714" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:06:35 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-003-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:51:54.499Z" type="translation-status" status="3" xml:id="UT22084-096-003-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:51:54.499Z" type="text-version" status="0.0.1" xml:id="UT22084-096-003-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
