--- a/translations/kangyur/placeholders/091-070_toh673,1089-the_praise_by_indra.xml
+++ b/translations/kangyur/placeholders/091-070_toh673,1089-the_praise_by_indra.xml
@@ -10,7 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">lha'i dbang po brgya byin gyis bstod pa/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">lha'i dbang po brgya byin gyis bstod pa/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-070"/>
             </publicationStmt>
             <sourceDesc>
@@ -33,9 +38,19 @@
                     <idno source-id="O1JC114941JC12853" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:09:02 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-070-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:56:19.597Z" type="translation-status" status="3" xml:id="UT22084-091-070-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:56:19.597Z" type="text-version" status="0.0.1" xml:id="UT22084-091-070-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
