--- a/translations/kangyur/placeholders/091-078_toh680,889-essence_of_sukhavati.xml
+++ b/translations/kangyur/placeholders/091-078_toh680,889-essence_of_sukhavati.xml
@@ -8,7 +8,12 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">Essence of Sukhāvatī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-078"/>
             </publicationStmt>
             <sourceDesc>
@@ -31,9 +36,19 @@
                     <idno source-id="O1JC114941JC12651" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:05:28 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-078-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:02:48.889Z" type="translation-status" status="3" xml:id="UT22084-091-078-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:02:48.889Z" type="text-version" status="0.0.1" xml:id="UT22084-091-078-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
