--- a/translations/kangyur/placeholders/093-024_toh709,978-the_great_awareness_of_aparajita.xml
+++ b/translations/kangyur/placeholders/093-024_toh709,978-the_great_awareness_of_aparajita.xml
@@ -7,9 +7,14 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">gzhan gyis mi thub pa'i rig pa chen mo/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Great Awareness of Aparājitā</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">mahāvidyāparājita</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Mahāvidyāparājita</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-024"/>
             </publicationStmt>
             <sourceDesc>
@@ -32,9 +37,19 @@
                     <idno source-id="O1JC114941JC12741" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:04 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-093-024-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:05:13.84Z" type="translation-status" status="3" xml:id="UT22084-093-024-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:05:13.84Z" type="text-version" status="0.0.1" xml:id="UT22084-093-024-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
