--- a/translations/kangyur/placeholders/096-069_toh820-the_verses_of_auspiciousness_for_the_thirtyseven_deities.xml
+++ b/translations/kangyur/placeholders/096-069_toh820-the_verses_of_auspiciousness_for_the_thirtyseven_deities.xml
@@ -9,7 +9,12 @@
                 <title type="mainTitle" xml:lang="en">The Verses of Auspiciousness for the Thirty-Seven Deities</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal rnal 'byor gyi rgyud kyi dkyil 'khor gyi lha/ de bzhin gshegs pa rigs lnga 'khor dang bcas pa lha sum cu rtsa bdun gyi bkra shis tshigs su bcad pa/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-069"/>
             </publicationStmt>
             <sourceDesc>
@@ -23,9 +28,19 @@
                     <idno source-id="O1JC114941JC12566" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:37:51 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-069-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:31:08.992Z" type="translation-status" status="3" xml:id="UT22084-096-069-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:31:08.992Z" type="text-version" status="0.0.1" xml:id="UT22084-096-069-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
