--- a/translations/kangyur/placeholders/096-073_toh824-verses_of_auspiciousness_for_the_three_jewels.xml
+++ b/translations/kangyur/placeholders/096-073_toh824-verses_of_auspiciousness_for_the_three_jewels.xml
@@ -11,14 +11,19 @@
                 <title xml:lang="Sa-Ltn" type="otherTitle">Ratnatraya­maṅgala­gāthā</title>
                 <title xml:lang="Sa-Ltn" type="otherTitle">Ratnatri­maṅgala­gāthā</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-073"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh824" type="text">
                     <ref>Toh 824</ref>
                     <biblScope>vol.96, ff.262r-262r(pp.523-523)</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
+                    <author xml:lang="en" xml:id="UT22084-096-073-1">Anon</author>
                     <location work="UT4CZ5369" count-pages="1">
                         <volume number="96" start-page="523" end-page="523"/>
                     </location>
@@ -28,7 +33,7 @@
                 <bibl key="toh4414" type="text">
                     <ref>Toh 4414</ref>
                     <biblScope>ff. 349v-350r</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
+                    <author xml:lang="en" xml:id="UT22084-096-073-2">Anon</author>
                     <location work="UT23703" count-pages="2">
                         <volume number="207" start-page="698" end-page="699"/>
                     </location>
@@ -36,10 +41,21 @@
                     <idno source-id="O1JC76301JC112201JC21757" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-11T10:35:59.16Z" user="admin">11/11/2021 10:35:59</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-4398-4464_PH_new_v2.4.xml" date-time="2021-11-02T14:27:22.591Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T14:27:22.591Z" type="import" xml:id="UT22084-096-073-3" source="tengyur-data-4398-4464_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-073-4">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:36:44.816Z" type="translation-status" status="3" xml:id="UT22084-096-073-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:36:44.816Z" type="text-version" status="0.0.1" xml:id="UT22084-096-073-6">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
