--- a/translations/kangyur/placeholders/096-076_toh827,1108-verses_of_auspiciousness_of_the_three_jewels.xml
+++ b/translations/kangyur/placeholders/096-076_toh827,1108-verses_of_auspiciousness_of_the_three_jewels.xml
@@ -13,20 +13,21 @@
                 <title xml:lang="Sa-Ltn" type="otherTitle">Triratna­svasti­gāthā</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date/>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-076"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh827" type="text">
                     <ref>Toh 827</ref>
                     <biblScope>vol.96, ff.263v-264r(pp.526-527)</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
-                    <author role="translatorTib" ref="eft:entity-34601" xml:lang="Sa-Ltn">Jinamitra</author>
-                    <author role="translatorTib" ref="eft:entity-18257" xml:lang="Bo-Ltn">zhu chen gyi lo tsA ba ban+de ye shes sde</author>
+                    <author xml:lang="en" xml:id="UT22084-096-076-1">Anon</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT22084-096-076-2">Jinamitra</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT22084-096-076-3">zhu chen gyi lo tsA ba ban+de ye shes sde</author>
                     <location work="UT4CZ5369" count-pages="2">
                         <volume number="96" start-page="526" end-page="527"/>
                     </location>
@@ -36,9 +37,9 @@
                 <bibl key="toh1108" type="text">
                     <ref>Toh 1108</ref>
                     <biblScope>vol.101, ff.278r-278r(pp.555-555)</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
-                    <author role="translatorTib" ref="eft:entity-34601" xml:lang="Sa-Ltn">Jinamitra</author>
-                    <author role="translatorTib" ref="eft:entity-18257" xml:lang="Bo-Ltn">zhu chen gyi lo tsA ba ban+de ye shes sde</author>
+                    <author xml:lang="en" xml:id="UT22084-096-076-4">Anon</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT22084-096-076-5">Jinamitra</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT22084-096-076-6">zhu chen gyi lo tsA ba ban+de ye shes sde</author>
                     <location work="UT4CZ5369" count-pages="1">
                         <volume number="101" start-page="555" end-page="555"/>
                     </location>
@@ -48,9 +49,9 @@
                 <bibl key="toh4413" type="text">
                     <ref>Toh 4413</ref>
                     <biblScope>ff. 349v-349v</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
-                    <author role="translatorTib" ref="eft:entity-34601" xml:lang="Sa-Ltn">Jinamitra</author>
-                    <author role="translatorTib" ref="eft:entity-18257" xml:lang="Bo-Ltn">zhu chen gyi lo tsA ba ban+de ye shes sde</author>
+                    <author xml:lang="en" xml:id="UT22084-096-076-7">Anon</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT22084-096-076-8">Jinamitra</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT22084-096-076-9">zhu chen gyi lo tsA ba ban+de ye shes sde</author>
                     <location work="UT23703" count-pages="1">
                         <volume number="207" start-page="698" end-page="698"/>
                     </location>
@@ -58,14 +59,30 @@
                     <idno source-id="O1JC76301JC112191JC21756" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-07T06:48:15.625Z" user="admin">07/06/2022 06:48:15</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-4398-4464_PH_new_v2.4.xml" date-time="2021-11-02T14:27:22.591Z" user="admin"/>
-
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-01-20T09:14:07.444Z" user="admin">Auto (correct-orphaned-attributions)</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-18T09:53:16.819Z" user="andre">Auto (entity-merge-attribution)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-07T06:48:13.515Z" user="sameer">Auto (entity-merge-attribution)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T14:27:22.591Z" type="import" xml:id="UT22084-096-076-10" source="tengyur-data-4398-4464_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2022-01-20T09:14:07.444Z" type="text-version" status="0.0.1" xml:id="UT22084-096-076-11">
+                    <desc>Auto (correct-orphaned-attributions)</desc>
+                </change>
+                <change who="#andre" when="2022-04-18T09:53:16.819Z" type="text-version" status="0.0.2" xml:id="UT22084-096-076-12">
+                    <desc>Auto (entity-merge-attribution)</desc>
+                </change>
+                <change who="#sameer" when="2022-06-07T06:48:13.515Z" type="text-version" status="0.0.3" xml:id="UT22084-096-076-13">
+                    <desc>Auto (entity-merge-attribution)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-096-076-14">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:38:55.101Z" type="translation-status" status="3" xml:id="UT22084-096-076-15">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:38:55.101Z" type="text-version" status="0.0.5" xml:id="UT22084-096-076-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
