--- a/translations/kangyur/placeholders/101-152_toh1096-the_prayer_of_maitreya.xml
+++ b/translations/kangyur/placeholders/101-152_toh1096-the_prayer_of_maitreya.xml
@@ -8,14 +8,15 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Prayer of Maitreya</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byams pa'i smon lam/</title>
-                <author role="translatorMain" ref=""/>
-                <author role="translatorEng" ref="contributors.xml#person-324">84000 editors</author>
+                <author role="translatorMain" xml:id="UT22084-101-152-8"/>
+                <author role="translatorEng" xml:id="UT22084-101-152-2">84000 editors</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2020</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-101-152"/>
                 <date/>
             </publicationStmt>
@@ -30,13 +31,30 @@
                     <idno source-id="O1JC114941JC12860" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-13T10:21:55.551Z" user="admin">13/04/2023 10:21:55</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T09:24:27.564Z" user="john">0.0.1</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2020-03-05T09:56:26.199Z" user="line-tofte">2.h</note>
-                <note type="updated" update="translation-status" value="" date-time="2023-04-13T10:21:51.18Z" user="line-tofte"/>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2023-04-13T10:21:51.18Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2020-03-05T09:24:27.564Z" type="text-version" status="0.0.1" xml:id="UT22084-101-152-3">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-03-05T09:56:26.199Z" type="translation-status" status="2.h" xml:id="UT22084-101-152-4">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-13T10:21:51.18Z" type="translation-status" status="" xml:id="UT22084-101-152-5">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-04-13T10:21:51.18Z" type="text-version" status="0.0.2" xml:id="UT22084-101-152-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-101-152-7">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:40:17.522Z" type="translation-status" status="3" xml:id="UT22084-101-152-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T11:40:17.522Z" type="text-version" status="0.0.4" xml:id="UT22084-101-152-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
