--- a/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
+++ b/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">grags ldan ma'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryayaśovatīdhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa grags ldan ma'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-094-009-1"/>
+                <author role="translatorMain" xml:id="UT22084-094-009-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-094-009-2">Adam Krug</author>
+                <editor role="projectEditor" xml:id="UT22084-094-009-13">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-094-009"/>
                 <date/>
             </publicationStmt>
@@ -65,6 +66,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-05T13:34:47.032Z" type="text-version" status="0.0.5" xml:id="UT22084-094-009-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-05T13:35:17.898Z" type="text-version" status="0.0.6" xml:id="UT22084-094-009-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T12:32:55.47Z" type="translation-status" status="2.f" xml:id="UT22084-094-009-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T12:32:55.47Z" type="text-version" status="0.0.7" xml:id="UT22084-094-009-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
