--- a/translations/kangyur/placeholders/087-010_toh505-the_incantation_of_vaiduryaprabha.xml
+++ b/translations/kangyur/placeholders/087-010_toh505-the_incantation_of_vaiduryaprabha.xml
@@ -12,14 +12,15 @@
                 <author role="translatorMain" xml:id="UT22084-087-010-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-087-010-2">Adam Krug</author>
                 <editor role="projectEditor" xml:id="UT22084-087-010-20">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-087-010-29">Dawn Collins</editor>
                 <sponsor xml:id="UT22084-087-010-3">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-087-010"/>
                 <date/>
             </publicationStmt>
@@ -91,6 +92,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-01T15:33:16.64Z" type="text-version" status="0.0.12" xml:id="UT22084-087-010-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-01T15:33:55.258Z" type="text-version" status="0.0.13" xml:id="UT22084-087-010-30">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T14:56:25.476Z" type="translation-status" status="2.d" xml:id="UT22084-087-010-31">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T14:56:25.476Z" type="text-version" status="0.0.14" xml:id="UT22084-087-010-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
